force-app/main/default/objects/Income_Card_Payment__c/Income_Card_Payment__c.object-meta.xml
<CustomObject>
    <description>Smarter Pay - Card Payment Detail</description>
    <label>Card Payment Detail</label>
    <nameField>
        <displayFormat>HUAPP-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Card Payment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>