force-app/main/default/objects/Income_Card_Payment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Card Payment Details</relationshipLabel>
    <relationshipName>Card_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>