force-app/main/default/objects/Income_Card_Payment__c/fields/Authorisation_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Code__c</fullName>
    <label>Authorisation Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>