force-app/main/default/objects/Income_Card_Payment__c/fields/Authorisation_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Date__c</fullName>
    <inlineHelpText>Card Payment Created DateTime</inlineHelpText>
    <label>Authorisation DateTime</label>
    <type>DateTime</type>
</CustomField>