force-app/main/default/objects/Income_Card_Payment__c/fields/Bank_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bank_Notes__c</fullName>
    <label>Payment Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>