force-app/main/default/objects/Income_Card_Payment__c/fields/Basket__c.field-meta.xml
<CustomField>
    <fullName>Basket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Basket</label>
    <referenceTo>Basket__c</referenceTo>
    <relationshipLabel>Card Payment Details</relationshipLabel>
    <relationshipName>Card_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>