force-app/main/default/objects/Income_Card_Payment__c/fields/Basket_Id__c.field-meta.xml
<CustomField>
    <fullName>Basket_Id__c</fullName>
    <externalId>true</externalId>
    <label>Basket Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>