force-app/main/default/objects/Income_Card_Payment__c/fields/Card_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiry_Date__c</fullName>
    <label>Card Expiry Date</label>
    <type>Date</type>
</CustomField>