force-app/main/default/objects/Income_Card_Payment__c/fields/Card_Number_Ending__c.field-meta.xml
<CustomField>
    <fullName>Card_Number_Ending__c</fullName>
    <label>Card Number Ending</label>
    <length>16</length>
    <type>Text</type>
</CustomField>