force-app/main/default/objects/Income_Card_Payment__c/fields/Deposit_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipName>Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>