force-app/main/default/objects/Income_Card_Payment__c/fields/Direct_Debit_Detail__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Debit Detail</label>
    <referenceTo>Income_Direct_Debit__c</referenceTo>
    <relationshipName>Card_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>