force-app/main/default/objects/Income_Card_Payment__c/fields/First_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Amount__c</fullName>
    <label>First Payment Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>