force-app/main/default/objects/Income_Card_Payment__c/fields/First_Payment_Taken__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Payment Taken</label>
    <type>Checkbox</type>
</CustomField>