force-app/main/default/objects/Income_Card_Payment__c/fields/Formula_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Formula_Expiry_Date__c</fullName>
    <formula>Card_Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Expiry Date</label>
    <type>Date</type>
</CustomField>