force-app/main/default/objects/Income_Card_Payment__c/fields/Gateway_Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Customer_Reference__c</fullName>
    <label>Gateway Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>