force-app/main/default/objects/Income_Card_Payment__c/fields/GlobalPay_Card_Ref__c.field-meta.xml
<CustomField>
    <fullName>GlobalPay_Card_Ref__c</fullName>
    <label>GlobalPay Card Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>