force-app/main/default/objects/Income_Card_Payment__c/fields/Internal_Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Payment_Description__c</fullName>
    <label>Internal Payment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>