force-app/main/default/objects/Income_Card_Payment__c/fields/Name_On_Card__c.field-meta.xml
<CustomField>
    <fullName>Name_On_Card__c</fullName>
    <label>Name On Card</label>
    <length>50</length>
    <type>Text</type>
</CustomField>