force-app/main/default/objects/Income_Card_Payment__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <description>Payment Intent   If First Payment is collected
Setup Intent , If No Payment is collected</description>
    <inlineHelpText>Payment Intent /Setup Intent Id</inlineHelpText>
    <label>Setup/Payment Intent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>