force-app/main/default/objects/Income_Card_Payment__c/fields/Payment_Gateway_Username__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Username__c</fullName>
    <label>Payment Gateway Username</label>
    <length>30</length>
    <type>Text</type>
</CustomField>