force-app/main/default/objects/Income_Card_Payment__c/fields/Payment_Is_From_Console_View__c.field-meta.xml
<CustomField>
    <fullName>Payment_Is_From_Console_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Is From Console View</label>
    <type>Checkbox</type>
</CustomField>