force-app/main/default/objects/Income_Card_Payment__c/fields/Payment_Method_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Id__c</fullName>
    <externalId>true</externalId>
    <label>Payment Method Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>