force-app/main/default/objects/Income_Card_Payment__c/fields/Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Type__c</fullName>
    <label>Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>card</fullName>
            </value>
            <value>
                <fullName>sepa_debit</fullName>
            </value>
            <value>
                <fullName>oppwa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>