force-app/main/default/objects/Income_Card_Payment__c/fields/Payment_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Vendor__c</fullName>
    <label>Payment Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Globalpay</fullName>
            </value>
            <value>
                <fullName>SagePayPi</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
                <default>true</default>
                <label>Stripe</label>
            </value>
            <value>
                <fullName>Oppwa</fullName>
            </value>
            <value>
                <fullName>SagePay</fullName>
                <isActive>false</isActive>
                <label>SagePay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>