force-app/main/default/objects/Income_Card_Payment__c/fields/Postal_Order__c.field-meta.xml
<CustomField>
    <fullName>Postal_Order__c</fullName>
    <label>Cheque Number / Postal Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>