force-app/main/default/objects/Income_Card_Payment__c/fields/Recurring_Donation__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Donation</label>
    <referenceTo>npe03__Recurring_Donation__c</referenceTo>
    <relationshipLabel>Card Payment Details</relationshipLabel>
    <relationshipName>Card_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>