force-app/main/default/objects/Income_Card_Payment__c/fields/RP_Amount__c.field-meta.xml
<CustomField>
    <fullName>RP_Amount__c</fullName>
    <label>RP Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>