force-app/main/default/objects/Income_Card_Payment__c/fields/RP_Description__c.field-meta.xml
<CustomField>
    <fullName>RP_Description__c</fullName>
    <label>RP Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>