force-app/main/default/objects/Income_Card_Payment__c/fields/RP_Enabled__c.field-meta.xml
<CustomField>
    <fullName>RP_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RP Enabled</label>
    <type>Checkbox</type>
</CustomField>