force-app/main/default/objects/Income_Card_Payment__c/fields/RP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RP_End_Date__c</fullName>
    <description>The date after which no further Repeat Payment will be taken</description>
    <inlineHelpText>Date after which no further Repeat Payments will be taken, blank means for ever.</inlineHelpText>
    <label>RP End Date</label>
    <type>Date</type>
</CustomField>