force-app/main/default/objects/Income_Card_Payment__c/fields/RP_Frequency__c.field-meta.xml
<CustomField>
    <fullName>RP_Frequency__c</fullName>
    <label>RP Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>