force-app/main/default/objects/Income_Card_Payment__c/fields/RP_Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>RP_Next_Payment_Date__c</fullName>
    <label>RP Next Payment Date</label>
    <type>Date</type>
</CustomField>