force-app/main/default/objects/Income_Card_Payment__c/fields/RP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RP_Start_Date__c</fullName>
    <label>RP Start Date</label>
    <type>Date</type>
</CustomField>