force-app/main/default/objects/Income_Card_Payment__c/fields/RP_Stretch__c.field-meta.xml
<CustomField>
    <fullName>RP_Stretch__c</fullName>
    <label>RP Stretch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>