force-app/main/default/objects/Income_Card_Payment__c/fields/Sagepay_Security_Key__c.field-meta.xml
<CustomField>
    <fullName>Sagepay_Security_Key__c</fullName>
    <label>Sagepay Security Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>