force-app/main/default/objects/Income_Card_Payment__c/fields/Source_Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>Source_Card_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Card Payment</label>
    <referenceTo>Income_Card_Payment__c</referenceTo>
    <relationshipLabel>Card Payment Details</relationshipLabel>
    <relationshipName>Card_Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>