force-app/main/default/objects/Income_Card_Payment__c/fields/Standing_Order__c.field-meta.xml
<CustomField>
    <fullName>Standing_Order__c</fullName>
    <label>Standing Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>