force-app/main/default/objects/Income_Card_Payment__c/fields/Surcharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Amount__c</fullName>
    <label>Surcharge Amount</label>
    <summarizedField>Income_Card_Payment_History__c.Surcharge_Amount__c</summarizedField>
    <summaryForeignKey>Income_Card_Payment_History__c.Income_Card_Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>