force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Amount_To_Take__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Amount_To_Take__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Amount To Take</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>