force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Billing_Address__c</fullName>
    <formula>Opportunity__r.Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Billing Address</label>
    <type>Text</type>
</CustomField>