force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Billing_City__c</fullName>
    <formula>Opportunity__r.Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Billing City</label>
    <type>Text</type>
</CustomField>