force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Billing_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Billing_CountryCode__c</fullName>
    <formula>Opportunity__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Billing CountryCode</label>
    <type>Text</type>
</CustomField>