force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Billing_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Billing_Firstname__c</fullName>
    <formula>Opportunity__r.Account.Billing_Firstname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Billing Firstname</label>
    <type>Text</type>
</CustomField>