force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Billing_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Billing_Postcode__c</fullName>
    <formula>Opportunity__r.Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Billing Postcode</label>
    <type>Text</type>
</CustomField>