force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Billing_State__c</fullName>
    <formula>Opportunity__r.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Billing State</label>
    <type>Text</type>
</CustomField>