force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Delivery_Address__c</fullName>
    <formula>Opportunity__r.Account.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Delivery Address</label>
    <type>Text</type>
</CustomField>