force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Delivery_City__c</fullName>
    <formula>Opportunity__r.Account.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Delivery City</label>
    <type>Text</type>
</CustomField>