force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Delivery_Country__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Delivery_Country__c</fullName>
    <formula>Opportunity__r.Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Delivery Country</label>
    <type>Text</type>
</CustomField>