force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Delivery_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Delivery_Postcode__c</fullName>
    <formula>Opportunity__r.Account.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Delivery Postcode</label>
    <type>Text</type>
</CustomField>