force-app/main/default/objects/Income_Card_Payment__c/fields/Token_Hidden_Delivery_Surname__c.field-meta.xml
<CustomField>
    <fullName>Token_Hidden_Delivery_Surname__c</fullName>
    <formula>Opportunity__r.Account.Billing_Surname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Hidden Delivery Surname</label>
    <type>Text</type>
</CustomField>