force-app/main/default/objects/Income_Card_Payment__c/fields/Total_Amount_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Refunded__c</fullName>
    <label>Total Amount Refunded</label>
    <summarizedField>Income_Card_Payment_History__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Income_Card_Payment_History__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Income_Card_Payment_History__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Refund</value>
    </summaryFilterItems>
    <summaryForeignKey>Income_Card_Payment_History__c.Income_Card_Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>