force-app/main/default/objects/Income_Card_Payment__c/fields/Total_Amount_Taken__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Taken__c</fullName>
    <label>Total Amount Taken</label>
    <summarizedField>Income_Card_Payment_History__c.Credit_Amount__c</summarizedField>
    <summaryForeignKey>Income_Card_Payment_History__c.Income_Card_Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>