force-app/main/default/objects/Income_Card_Payment__c/fields/Transaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Source__c</fullName>
    <label>Transaction Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MOTO</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>DeferredEcommerce</fullName>
            </value>
            <value>
                <fullName>DeferredMOTO</fullName>
            </value>
            <value>
                <fullName>AuthenticateAuthoriseEcommerce</fullName>
            </value>
            <value>
                <fullName>AuthenticateAuthoriseMOTO</fullName>
            </value>
            <value>
                <fullName>CAF</fullName>
            </value>
            <value>
                <fullName>Benevity</fullName>
            </value>
            <value>
                <fullName>LaunchGood</fullName>
            </value>
            <value>
                <fullName>Give Brite</fullName>
            </value>
            <value>
                <fullName>JustGiving</fullName>
            </value>
            <value>
                <fullName>Everydayhero</fullName>
            </value>
            <value>
                <fullName>Muslim Giving</fullName>
            </value>
            <value>
                <fullName>Ramadan Giving</fullName>
            </value>
            <value>
                <fullName>Facebook Giving</fullName>
            </value>
            <value>
                <fullName>VirginMoney Giving</fullName>
            </value>
            <value>
                <fullName>Charities Trust</fullName>
            </value>
            <value>
                <fullName>GAYE</fullName>
            </value>
            <value>
                <fullName>In Kind</fullName>
            </value>
            <value>
                <fullName>Standing Order</fullName>
            </value>
            <value>
                <fullName>sepa_debit</fullName>
            </value>
            <value>
                <fullName>card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>