force-app/main/default/objects/Income_Card_Payment__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Full Refund</fullName>
            </value>
            <value>
                <fullName>Partial Refund</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Deferred_Released</fullName>
                <label>Deferred Released</label>
            </value>
            <value>
                <fullName>Deferred_Aborted</fullName>
                <label>Deferred Aborted</label>
            </value>
            <value>
                <fullName>Authenticate</fullName>
            </value>
            <value>
                <fullName>Authorised</fullName>
            </value>
            <value>
                <fullName>Authorised &amp; First Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>