force-app/main/default/objects/Income_Card_Payment__c/recordTypes/Paypal.recordType-meta.xml
<RecordType>
    <fullName>Paypal</fullName>
    <active>true</active>
    <description>Paypal Payments</description>
    <label>Paypal</label>
</RecordType>