force-app/main/default/objects/Income_Card_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Gateway_Customer_Reference__c</columns>
    <columns>Payment_Status_Details__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Total_Amount_Taken__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Income_Card_Payment__c.Card_Payment</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>